<resources>
    <string name="facebook_app_id" translatable="false">2791584067750180</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb2791584067750180</string>
    <string name="default_notification_channel_id" translatable="false">Sash_fcm_default_channel</string>
    <string name="default_notification_channel_name" translatable="true">Sash</string>
    <string name="AUTH_ID">203646964865-ie0kg3ji47ff24ld4selfbo5itbummki.apps.googleusercontent.com</string>
    <string name="app_name">Nelyan</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="privacy"><u>privacy policy.</u></string>
    <string name="accept"><u>I accept the general conditions</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="walkone">Les activités dans ma ville</string>
    <string name="walkonedesc">Trouver toutes les activités, associations et événements pour adultes et enfants dans ma ville : théâtre, équitation, tennis,judo, danse, bons plans...</string>
    <string name="walktwo">Garde d\'enfants</string>
    <string name="walktwodesc">Trouver facilement un mode de garde pour vo tre enfant : une créche, une assistante matern elle, une garderie, sortie d’école, un ou une baby-sitter...</string>
    <string name="walkthree">Les écoles de mes enfants</string>
    <string name="walkthreedesc">Vous êtes parents et souhaitez-vous installer? En un clic Nelyan vous affiche les emplacements des écoles à proximité de votre future adresse avant d\'emménager afin de vous projeter au mieux dans votre vie quotidienne et calculer le temps de trajet nécessaire pour vous rendre au travail...</string>
    <string name="walkfour">Dicussions et bons plans </string>
    <string name="walkfourdesc">Exclusivité réservée aux habitants de votre ville, Nelyan met à disposition un espace pour échanger entre habitants et voisins, partager des bons plans, s\'entraider, se rencontrer...</string>
    <string name="walkfive">Les commerçants dans ma ville</string>
    <string name="walkfivedesc">Trouver tous les commerçants et artisans dans ma ville : restaurant, supermarché, salon de coiffure, boutique prêt-à-porter, fleuriste...</string>
    <string name="activtydetailsdesc">During this summer, many cities show movies in the park. Bring a blanket,snacks,a light sweater and enjoy the magic of cinema.
    Any city can be exhilarating. If you come from a suburban or rural area, it can be especially magical, but even lifelong urbanities recognize the excitement and wonder of cityscapes. ith so many things to do on any given day or night, it can beoverwhelming to try and make plans, but that\'s one of the best things about the city. You can drive in with no plan at all and still find a million things to do on a moment\'s notice.
    </string>
    <string name="loremipsum">During this summer, many cities show movies in the park. Bring a blanket,snacks,a light sweater and enjoy the magic of cinema.</string>
    <string name="home">Home</string>
    <string name="add">Add</string>
    <string name="alert">My Alert</string>
    <string name="favo">Favorite</string>
    <string name="profile">Profile</string>
    <string name="contact">Contact Us</string>
    <string name="noti">Notifications</string>
    <string name="settings">Settings</string>
    <string name="mar_chal_20km">Maréchal 20KM</string>
    <string name="lorem_ipsum">Lorem ipsum</string>
    <string name="logout">Logout</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="strok" />
    <string name="heading">Heading</string>
    <string name="permissions_is_mandatory">Permissions is mandatory.</string>
    <string name="ok">Ok</string>
    <string name="go_to_settings_to_give_permissions">Go to settings to give permissions because permissions is mandatory.</string>
    <string name="contactUs">Contact Us</string>
    <string name="Email">Email</string>
    <string name="Comment">Comment</string>
    <string name="nursery">Nursery</string>
    <string name="activity">Activity</string>
    <string name="activity1">Activity</string>
    <string name="filteractivity">Activity</string>
    <string name="materialAssitant">Material Assistant</string>
    <string name="maternal_asistant">Maternal Assistant</string>
    <string name="babySitter">Baby Sitter</string>
    <string name="traderArtisans">Traders and Artisans</string>
    <string name="publisher">Publisher</string>
    <string name="myMessage">My Message</string>
    <string name="cityChat">City Chat</string>
    <string name="event">Event</string>
    <string name="description1">Description:</string>
    <string name="name_of_nurserie">Name of Nurserie</string>
    <string name="name_of_nursery">Name of Nursery</string>
    <string name="address">Address</string>
    <string name="select_time1">Select Time(Morning)</string>
    <string name="select_time2">Select Time(Evening)</string>
    <string name="city">City</string>
    <string name="no_ads_availalbe">No Ads available</string>
    <string name="no_favourite_availalbe">No Favourite Ads available</string>
    <string name="no_activities_available">No Activities available</string>
    <string name="no_child_care_available">No any post available</string>
    <string name="no_trader_available">No any post available</string>
    <string name="no_school_available">No school available for this category</string>
    <string name="available_place">Available Places: </string>
    <string name="no_internet_error">No Internet Connection</string>
    <string name="number_of_places_still_avilable">Number of places still available</string>
    <string name="name_of_maternal_assistant">Name of Maternal Assistant</string>
    <string name="maternal_assistant">Maternal Assistant</string>
    <string name="phone_number">Phone Number</string>
    <string name="maternal_missing_error">Please enter your maternal name</string>
    <string name="please_enter_name">Please enter  name</string>
    <string name="places_number_error">Please enter number of places</string>
    <string name="phone_number_missing">Please enter phone number</string>
    <string name="address_missing_error">Please select your address</string>
    <string name="description_missing">Please enter your description</string>
    <string name="select_image_video_error">Please select at-least one media file image or video .</string>
    <string name="submit">Submit</string>
    <string name="price1">Price:</string>
    <string name="startdate1">Start Date:</string>
    <string name="end_date1">End Date:</string>
    <string name="end_time1">End Time:</string>
    <string name="start_time1">Start Time:</string>
    <string name="select_city_error">Please select your city</string>
    <string name="select">Select</string>
    <string name="sign_up_as_a">Sign Up As A</string>
    <string name="create_an_account">Create an Account</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="email_address1">Email Address: </string>
    <string name="email_address_missing">Please enter email address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_city">Your City</string>
    <string name="register">REGISTER</string>
    <string name="or">OR</string>
    <string name="by_clicking_on_continue">By clicking on continue,\t</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="address_error">Please select your address</string>
    <string name="location_missing_error">Please select location</string>
    <string name="message_missing_error">Please enter your message</string>
    <string name="activity_name_missing_error">Please enter your activity name</string>
    <string name="shop_name_missing_error">Please enter your shop name</string>
    <string name="activity_type_missing_error">Please select your activity Type</string>
    <string name="trader_type_missing_error">Please select your trader Type</string>
    <string name="child_care_type_missing_error">Please select Child Care Type</string>
    <string name="media_missing_error">Please select atleast one media file image.</string>
    <string name="ad_info1">Ad Info:</string>
    <string name="favorite">Favorite</string>
    <string name="type_of_activities">Type of activities</string>
    <string name="public_schools">Public Schools</string>
    <string name="private_schools">Private Schools</string>
    <string name="phone">Phone</string>
    <string name="add_a_message_that_appears_on_your_ad">Add a message that appears on your ad ..</string>
    <string name="publisher_unselected_error">Please select your publisher type</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Sign Up</string>
    <string name="password_mismatch_error">Password does not match</string>
    <string name="city_missing_error">Please select your city</string>
    <string name="confirm_password_missing_error">Please enter confirm password</string>
    <string name="utilization_missing_error">Please enter utilization</string>
    <string name="signup_type_error">Please select the user type</string>
    <string name="logout_message">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_utilisation">Enter Utilisation</string>
    <string name="types_of_utilisation">Types of Utilisation</string>
    <string name="city_name">City Name</string>
    <string name="name">Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_activity_name">Enter Activity Name</string>
    <string name="enter_event_name">Enter Event Name</string>
    <string name="enter_child_care_filter_name">Enter Name</string>
    <string name="are_you_sure_you_want_to_logout">Are you sure you want to logout?</string>
    <string name="password_donot_match_error">New and Confirm password do not match</string>
    <string name="confirm_password_missing_erro">Please enter confirm Password</string>
    <string name="photo_video">Photo/Video</string>
    <string name="photo">Photo</string>
    <string name="type_of_activity">Type of Activity</string>
    <string name="name_of_shop">Name of Shop</string>
    <string name="name_of_shop1">Name of Shop:</string>
    <string name="enter_you_scroll_message_of_ad">Enter you scroll message of ad</string>
    <string name="add_an_event">Add An Event</string>
    <string name="event_picture">Event Picture</string>
    <string name="name_of_event">Name of Event</string>
    <string name="select_date">Select Date</string>
    <string name="from1">From:</string>
    <string name="to1">To:</string>
    <string name="select_from">Select From</string>
    <string name="select_to">Select To</string>
    <string name="price">Price(€)</string>
    <string name="price11">Price</string>
    <string name="add_more_event">Add More</string>
    <string name="add_product_image">Add a product Image</string>
    <string name="product_title">Product Title</string>
    <string name="product_price">Product Price</string>
    <string name="description">Description</string>
    <string name="select_time">Select Time</string>
    <string name="are_you_sure_to_mute_this_group_notifications"> Are you sure to mute this Group Notifications ?</string>
    <string name="update">Update now</string>
    <string name="a_new_version_of_nelyan_application_is_available">A new version of Nelyan Application is available on play store</string>
    <string name="update_available">Update Available</string>
</resources>