<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_10sdp"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/back_shape"
        android:orientation="vertical"
        android:paddingLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingRight="@dimen/_5sdp"
        android:paddingBottom="@dimen/_10sdp">

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/add_an_event" />

        <RelativeLayout
            android:id="@+id/rl_Add"
            android:layout_width="@dimen/_140sdp"
            android:layout_height="@dimen/_90sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_gravity="center"
            android:background="@drawable/back_shape"
            >

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/ivEventimage"
                app:riv_corner_radius="@dimen/_5sdp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                />

            <ImageView
                android:id="@+id/ivCam"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:backgroundTint="@color/grey"
                android:src="@drawable/ic_photo_one"
                android:scaleType="centerCrop"
                />

        </RelativeLayout>

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/event_picture"
            android:textSize="@dimen/_8sdp" />

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/name_of_event" />

        <EditText
            android:id="@+id/edtEventName"
            style="@style/SimpleEdittext"
            android:maxLength="150"
            android:maxLines="1"
            android:hint="@string/name_of_event"
            android:inputType="text" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            style="@style/CommonTextWrapcontent"
            android:text="@string/select_date" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextWrapcontent"
                    android:layout_gravity="center"
                    android:text="@string/from1" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tv_cal"
                        style="@style/CommonTextMatchparent"
                        android:drawableRight="@drawable/calendar_icon"
                        android:hint="@string/select_date"
                        android:inputType="number"
                        android:paddingStart="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </LinearLayout>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextWrapcontent"
                    android:layout_gravity="center"
                    android:text="@string/to1" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvCal1"
                        style="@style/CommonTextMatchparent"
                        android:drawableEnd="@drawable/calendar_icon"
                        android:hint="@string/select_date"
                        android:inputType="number"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/CommonTextWrapcontent"
            android:text="@string/select_time" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextWrapcontent"
                    android:layout_gravity="center"
                    android:text="@string/from1" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/edClo2"
                        style="@style/CommonTextMatchparent"
                        android:drawableEnd="@drawable/clock_purple_icon"
                        android:hint="@string/select_from"
                        android:inputType="number"
                        android:paddingStart="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />

                </LinearLayout>

            </LinearLayout>




            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    style="@style/CommonTextWrapcontent"
                    android:layout_gravity="center"
                    android:text="@string/to1" />




                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/edClo3"
                        style="@style/CommonTextMatchparent"
                        android:drawableRight="@drawable/clock_purple_icon"
                        android:hint="@string/select_to"
                        android:inputType="number"
                        android:paddingStart="@dimen/_5sdp"
                        android:textColor="@color/black"
                        android:textColorHint="@color/grey" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/description" />

        <EditText
            android:id="@+id/edtDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/transparent"
            android:fontFamily="@font/regular"
            android:hint="@string/description"
            android:paddingEnd="@dimen/_10sdp"
            android:maxLines="3"
            android:textColor="@color/black"
            android:textColorHint="@color/grey"
            android:textSize="@dimen/_10sdp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/black" />

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/price" />

        <EditText
            android:id="@+id/edtPrice"
            style="@style/SimpleEdittext"
            android:hint="@string/price11"
            android:maxLines="1"
            android:maxLength="10"
            android:digits="0123456789."
            android:inputType="number" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/black" />

        <TextView
            style="@style/CommonTextWrapcontent"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/city" />

        <TextView
            android:id="@+id/et_city_add_event"
            style="@style/SimpleEdittext"
            android:hint="@string/city"
             />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/_2sdp"
            android:background="@color/black" />

        <TextView
            android:id="@+id/tvAddMore"
            style="@style/CommonTextWrapcontent"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/_5sdp"
            android:background="@drawable/add_more_btn"
            android:gravity="center"
            android:paddingLeft="@dimen/_5sdp"
            android:paddingRight="@dimen/_5sdp"
            android:text="@string/add_more_event"
            android:textColor="@color/white"
            android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>