<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginTop="@dimen/_10sdp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/_5sdp"
        android:paddingLeft="@dimen/_5sdp"
        android:orientation="vertical"
        android:paddingTop="@dimen/_10sdp"
        android:background="@drawable/back_shape"
        android:paddingBottom="@dimen/_10sdp">
    <TextView
        style="@style/CommonTextWrapcontent"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/add_product_image" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_90sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:background="@drawable/back_shape">

        <com.makeramen.roundedimageview.RoundedImageView
            android:id="@+id/ivProductImage"
            android:layout_width="match_parent"
            app:riv_corner_radius="@dimen/_5sdp"
            android:layout_height="match_parent" />

        <ImageView
            android:id="@+id/ivCam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:backgroundTint="@color/grey"
            android:src="@drawable/camera_icon" />

    </RelativeLayout>

    <TextView
        style="@style/CommonTextWrapcontent"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/product_title" />

    <EditText
        android:id="@+id/edtProductTitle"
        style="@style/SimpleEdittext"
        android:hint="@string/product_title"
        android:inputType="text" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        style="@style/CommonTextWrapcontent"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/product_price" />

    <EditText
        android:id="@+id/edtProductPrice"
        style="@style/SimpleEdittext"
        android:hint="@string/product_price"
        android:inputType="number" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        style="@style/CommonTextWrapcontent"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/description" />

    <EditText
        android:id="@+id/edtDesc"
        style="@style/SimpleEdittext"
        android:imeOptions="actionDone"
        android:hint="@string/description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black" />

    <TextView
        android:id="@+id/tv_myAdd"
        style="@style/CommonTextWrapcontent"
        android:layout_gravity="end"
        android:layout_marginTop="@dimen/_5sdp"
        android:drawableStart="@drawable/plus_icon"
        android:drawablePadding="@dimen/_5sdp"
        android:text="@string/add"
        android:textSize="@dimen/_10sdp" />
    </LinearLayout>
</LinearLayout>