<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/tvHeading"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/heading"
        android:textSize="@dimen/_18sdp"
        android:scaleType="fitCenter"
        android:textColor="@color/white"
        android:gravity="center"
        android:background="@color/colorPrimary"
            android:fontFamily="@font/sfuidisplay_medium"
            />

    <TextView
        android:id="@+id/text_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvHeading"
        android:layout_marginTop="@dimen/_20sdp"
        android:gravity="center_horizontal"
        android:text="@string/app_name"
        android:textColor="@color/black"
        android:fontFamily="@font/sfuidisplay_medium"
        android:textSize="@dimen/_16sdp"
        android:paddingStart="@dimen/_10sdp"
        android:paddingEnd="@dimen/_10sdp"/>

    <Button
        android:id="@+id/btn_dialog"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_below="@+id/text_dialog"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_20sdp"
            android:background="@color/colorPrimary"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/sfuidisplay_medium"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/_15sdp"/>

</RelativeLayout>


